fix extra whitespace between search bar and "@" icon in channel header after expanding the right-hand side

--- a/webapp/sass/components/_webrtc.scss
+++ b/webapp/sass/components/_webrtc.scss
@@ -331,6 +331,6 @@
 
     .search__form {
         margin-left: 5px;
-        width: calc(100% - 80px);
+        width: calc(100% - 5px);
     }
 }
